tests/ui/consts/rustc-impl-const-stability.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/rustc-impl-const-stability.rs:5:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: const `impl` for trait `Default` which is not marked with `#[const_trait]`
  --> $DIR/rustc-impl-const-stability.rs:15:12
   |
LL | impl const Default for Data {
   |            ^^^^^^^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error[E0207]: the const parameter `host` is not constrained by the impl trait, self type, or predicates
  --> $DIR/rustc-impl-const-stability.rs:15:6
   |
LL | impl const Default for Data {
   |      ^^^^^ unconstrained const parameter
   |
   = note: expressions using a const parameter must map each value to a distinct output value
   = note: proving the result of expressions other than the parameter are unique is not supported

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0207`.
